--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!--
-     Frank Sinatra
-
-  "The old crooner himself:"
-       QB"   .  . ....^FBQQBQBQ
-       #^   ..../,, ,/yyBQBDBt`"B
-     B"  ._L_yQ&Qy&&QQBQQDlL;S; (Q
-    B^   /DQQQBQQQQQQBQBDQQD1:   "B
-   Q~   ,GQBDQDQQQQQQBBQQDQ&EC    7B
-   D    lQQQQQBQBQQQQQQQQBBID('    {
-   E   .iDDBQQBQQQQBBBQBQQDQ1!:    (
-   3   .(BQBBQBBQQQQBBQBBBDBS'     }                     I'm
-   Q   '~~<MMBQQBBQBP"""<BD1EL.    Q                   dreaming
-   Q    LuL `7QBBB?../LL;.!JDL     Q                    of a
-  "  ,  ,__&L.DBBEEL1L_,'EylEE!  ,U                     white
-  1 :s&yyQQQ6-DQBBQ&QQQQQQQQJY!  lyB1Q                Christmas.
-  S  ?DDQQBD'.QQBDQDBQBQQQDD1<  LIQDG
-  Q   j8BQE2 LQQBE9EBBEBQQES{! /BQSE
-   Q_ 'TS7L  <#P~^,G1?TXC3({!  3PEy
-    Q, ,_>'.,___yBD1DU;,'('''  yQ
-     L "Qy,  'IIIZl',L/&;!;:  LQ
-     Q; FD(  (`IE2L/QDB&lY!   6Q
-      Q, (/. `!?"21iQDU&/~   L FB
-       Q_ (EL/&&QDBQBDJ"   ,y^  `FB
-        Qy 75EEBBQESf`   _yB^      "M
-        Q7  `'^""~`   _yQQM'         `"FQ
-        F;         _yQQQQF              Q
-  -->
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <title>NYC Landmarks</title>
+</head>
+<body>
+  <div class="container">
+    <h1 class="lead" id="homepage"><a href="/">Homepage</a></h1>
     <%= yield %>
-  </body>
-
+  </div>
+</body>
 </html>
