--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -25,6 +25,5 @@
 </div><br>
 
 <div class="row col-sm-12">
-  <p class="lead"><a href="landmarks/new">Create New Landmark</a></p>
-  <p class="lead"><a href="/figures">View Figures</a></p>
+  <p class="lead"><a href="/figures/new">Create New Figure</a></p>
 </div>
