--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -20,12 +20,11 @@
           <p class="lead"><a href="/titles/<%=title.id%>"><%= title.name %></a></p>
         <% end %>
       </td>
-
+    
     </tr>
   </table>
 </div><br><br>
 
-
 <div class="row col-sm-12">
-  <p class="lead"><a href="/figures/<%=@figure.id%>/edit">Edit Landmark</a></p>
+  <p class="lead"><a href="/figures/<%=@figure.id%>/edit">Edit Figures</a></p>
 </div>
