--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -16,6 +16,14 @@
     </div>
   </div>
 
+  <!-- Figure -->
+  <div class="form-group row">
+    <label for="song" class="col-sm-2 form-control-label">Figure Name:</label>
+    <div class="col-sm-3">
+      <input type="text" id="landmark_year_completed" name="landmark[figure]" value="<%=@landmark.figure.name%>" class="form-control" placeholder="Figure">
+    </div>
+  </div>
+
   <!-- Submit Button -->
   <div class="form-group row">
     <div class="col-sm-offset-2 col-sm-10">
