--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,4 +1,4 @@
-<form action="/landmarks" method="post">
+<form action="/landmarks" method="POST">
 
   <!-- Landmark Name -->
   <div class="form-group row">
