--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="lead" id="homepage"><a href="/">Homepage</a></h1>
+    <h1 class="lead" id="header">
+      <a href="/landmarks">Landmarks</a>
+      <a href="/figures">Figures</a>
+      <a href="/titles">Titles</a>
+    </h1>
     <%= yield %>
   </div>
 </body>
