--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= @figure.name %></h2><br><br>
+<h2>Edit <%=@figure.name%></h2><br><br>
 
 <form action="/figures/<%=@figure.id%>" method="post">
 
@@ -6,7 +6,7 @@
   <div class="form-group row">
     <label for="figure_name" class="col-sm-2 form-control-label">Figure Name:</label>
     <div class="col-sm-3">
-      <input type="text" id="figure_name" name="figure[name]" value="<%=@figure.name%>" class="form-control" placeholder="Name">
+      <input type="text" id="figure_name" name="figure[name]" value="<%=@figure.name%>" class="form-control">
     </div>
   </div>
 
@@ -32,7 +32,7 @@
         <label>
           <% Title.all.each do |title| %>
           <div class="row">
-            <input id="<%=title.name%>" type="checkbox" name="figure[add_titles][]" value="<%=title.id%>"> <%= title.name %>
+            <input id="<%=title.name%>" type="checkbox" name="figure[add_titles][]" value="<%=title.id%>"> <%=title.name%>
           </div>
           <% end %>
         </label>
@@ -43,7 +43,7 @@
   <!-- Submit Button -->
   <div class="form-group row">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" value="Create New Figure" class="btn btn-primary">Edit Figure</button>
+      <button type="submit" class="btn btn-primary">Edit Figure</button>
     </div>
   </div>
 
