--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,4 @@
-<div class="row col-sm-12">
-  <p class="lead"><a href="/landmarks/new">Create New Landmark</a></p>
-</div>
+<p class="lead"><a class="button" href="/landmarks/new">Create New Landmark</a></p>
 
 <div class="row col-sm-12">
   <table class="table table-stripped">
@@ -8,8 +6,8 @@
     <th><p class="lead">Year Completed</p></th>
     <tr>
       <% Landmark.all.each do |landmark| %>
-        <td><p class="lead"><a href="/landmarks/<%= landmark.id %>"><%= landmark.name %></a></p></td>
-        <td><p class="lead"><%= landmark.year_completed %></p></td>
+        <td><p class="lead"><a href="/landmarks/<%=landmark.id%>"><%= landmark.name %></a></p></td>
+        <td><p class="lead"><%=landmark.year_completed%></p></td>
     </tr>
     <% end %>
   </table>
